=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.4
 - Added Allow customizable Fact name abbreviations in charts (canajun2eh)
 - fixed [ 1923586 ] Sort log file lists (canajun2eh)
 - Added [ 1907082 ] Configuration option to remove gender icon on charts (canajun2eh)
 - Fixed [ 1915381 ] Media tab: "delete" deletes too much (canajun2eh)
 - Changed Improved reports: Pedigree, BDM, Birth, Marriage, Death (canajun2eh)
 - Added [ 1850735 ] Statistics : use Google Chart API (opus27)
 - Fixed [ 1864117 ] R-A:Fatal error: Call to undefined method GedcomDate::Format
 - Fixed [ 1857074 ] Media Firewalled Files not included on Backup (ljm)
 - Events of close relatives : add great-grandchildren/parents (opus27)
 - Added [ 1840895 ] reorder children in modified families (opus27)
 - Added [ 1686246 ] Insert new child at the right place in the family (opus27)
 - Fixed [ 1838140 ] Edit interface bug when place editing (opus27)
 - Fixed [ 1833538 ] GedCheck problem (opus27)
 - Added [ 1599135 ] Father's First Name in Lists (opus27)
 - Fixed [ 1842091 ] Error in Notes Tab V4.1.3 (and 4.1.4 svn) (opus27)
 - Added [ 1749591 ] Highlight maternal death (opus27)
 - Fixed [ 1840934 ] Associate Individual FACT/EVEN TYPE text (opus27)
 - Fixed [ 1834996 ] Sitemap module uses incorrect $SERVER_URL value (canajun2eh)
 - Added [ 1890383 ] Media Firewall use mod_rewrite when available (ljm)
 - Fixed [ 1892008 ] Media Firewall should not trigger rate limiter (ljm)
 - Partially Fixed [ 1891976 ] Media Firewall incompatible with clippings cart (ljm)
 
Version 4.1.3 2007.11.16
 - Fixed [ 1822946 ] Missing reference to port number in $SERVER_URL (yalnifj)
 - Fixed [ 1586584 ] Minimal theme - Icons on some Indi page tabs (canajun2eh)